# StudentDBMS_using_c

./: CMakeLists.txt  README.md  StudentDBMS  main.c
data/: students.db  students_export.csv
resources/: style.css
src/db/: db.c  db.h
src/gui/: form_view.c  form_view.h  list_view.c  list_view.h  main_window.c  main_window.h
src/utils/: gui_utils.c  gui_utils.h  logs.c  logs.h  themes.c  themes.h  voice.c  voice.h
src/visuals/: charts.c  charts.h
